crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/MappingType/stray_delimiter/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected CloseBracket. One of AtKeyword_Unreserved, CloseParen, ErrorKeyword_Unreserved, FinneyKeyword_Unreserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, LayoutKeyword_Unreserved, OpenBracket, RevertKeyword_Unreserved, SzaboKeyword_Unreserved, TransientKeyword_Unreserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/MappingType/stray_delimiter/input.sol:5:30]
   │
 5 │     mapping(string => bytes32] arg) x;
   │                              ┬  
   │                              ╰── Error occurred here.
───╯
